"#16 created get method for all providers that implements pagination"
